bug fix for incorrect rotation font size on mobile

--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ button, input[type="submit"], input[type="reset"] {
     100% { background-color: #333; color: #fff;}
 }
 
-  .operator.equals:focus{    
+.operator.equals:focus{    
     animation: fadeIt .7s ease-in-out; 
     background-color: #333; 
     color: #fff;
@@ -187,9 +187,7 @@ button, input[type="submit"], input[type="reset"] {
     }
 
     .bctecnica {
-        font-size: 1rem;
-        margin-top: .5rem;
-        padding-left: 3rem;
+        display: none;
     }
 
 }
